--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,12 @@
 
     {% load staticfiles %}
 
-    <!--syles -->
+    <!--styles -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'style.green.css' %}"/>
+    <!--styles -->
 
+    
     <meta charset="utf-8">
     <meta name="robots" content="all,follow">
     <meta name="googlebot" content="index,follow,snippet,archive">
