--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,16 @@
+{% load static from staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-
-
-    {% load staticfiles %}
-
-    <!--styles -->
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'style.green.css' %}"/>
-    <!--styles -->
-
-    
     <meta charset="utf-8">
     <meta name="robots" content="all,follow">
     <meta name="googlebot" content="index,follow,snippet,archive">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Universal - All In 1 Template</title>
-
     <meta name="keywords" content="">
+
+    <title>{% block title %}Django shop{% endblock %}</title>
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800' rel='stylesheet' type='text/css'>
 
@@ -30,17 +21,11 @@
     <!-- Css animations  -->
     <link href="css/animate.css" rel="stylesheet">
 
-    <!-- Theme stylesheet, if possible do not edit this stylesheet -->
-    <link href="css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+    <!-- THEME -->
+    <link rel="stylesheet" type="text/css" href="{% static 'style.green.css' %}"/>
 
     <!-- Custom stylesheet - for your changes -->
     <link href="css/custom.css" rel="stylesheet">
-
-    <!-- Responsivity for older IE -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
 
     <!-- Favicon and apple touch icons-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -52,10 +37,11 @@
     <link rel="apple-touch-icon" sizes="120x120" href="img/apple-touch-icon-120x120.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="img/apple-touch-icon-152x152.png" />
-    <!-- owl carousel css -->
 
+    <!-- owl carousel css -->
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/owl.theme.css" rel="stylesheet">
+    {% block extra_style %}{% endblock %}
 </head>
 
 <body>
@@ -64,8 +50,7 @@
 
         <header>
 
-            <!-- *** TOP ***
-_________________________________________________________ -->
+            <!-- *** TOP *** -->
             <div id="top">
                 <div class="container">
                     <div class="row">
@@ -91,20 +76,16 @@ _________________________________________________________ -->
                     </div>
                 </div>
             </div>
-
             <!-- *** TOP END *** -->
 
+            <!-- LOAD MENU -->
+            {% include 'menu.html' %}
+            <!-- LOAD MENU -->
+
+        </header>
 
 
-<!-- LOAD MENU -->
-{% include 'menu.html' %}
-<!-- LOAD MENU -->
-
-
-
-        <!-- *** LOGIN MODAL ***
-_________________________________________________________ -->
-
+        <!-- *** LOGIN MODAL *** _________________________________________________________ -->
         <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true">
             <div class="modal-dialog modal-sm">
 
@@ -135,36 +116,17 @@ _________________________________________________________ -->
                 </div>
             </div>
         </div>
-
         <!-- *** LOGIN MODAL END *** -->
 
-        <section>
+
+
+        <!-- BEGIN CONTENT -->
+        {% block content %}{% endblock %}
+        <!-- END CONTENT -->
 
 
 
-        
-            <!-- BEGIN CONTENT -->
-            <div class="page-content-wrapper">
-                <!-- BEGIN CONTENT BODY -->
-                <div class="page-content">
-                    {% block content %}{% endblock %}
-                </div>
-                <!-- END CONTENT BODY -->
-            </div>
-            <!-- END CONTENT -->
-
-
-        </section>
-
-
-
-
-
-
-
-
-        <!-- *** FOOTER ***
-____________________________________________________ -->
+        <!-- *** FOOTER *** ____________________________________________________ -->
 
         <footer id="footer">
             <div class="container">
@@ -184,59 +146,15 @@ ____________________________________________________ -->
 
                             <span class="input-group-btn">
 
-                        <button class="btn btn-default" type="button"><i class="fa fa-send"></i></button>
+                                <button class="btn btn-default" type="button"><i class="fa fa-send"></i></button>
 
-                    </span>
+                            </span>
 
                         </div>
                         <!-- /input-group -->
                     </form>
 
                     <hr class="hidden-md hidden-lg hidden-sm">
-
-                </div>
-                <!-- /.col-md-3 -->
-
-                <div class="col-md-3 col-sm-6">
-
-                    <h4>Blog</h4>
-
-                    <div class="blog-entries">
-                        <div class="item same-height-row clearfix">
-                            <div class="image same-height-always">
-                                <a href="#">
-                                    <img class="img-responsive" src="img/detailsquare.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="name same-height-always">
-                                <h5><a href="#">Blog post name</a></h5>
-                            </div>
-                        </div>
-
-                        <div class="item same-height-row clearfix">
-                            <div class="image same-height-always">
-                                <a href="#">
-                                    <img class="img-responsive" src="img/detailsquare.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="name same-height-always">
-                                <h5><a href="#">Blog post name</a></h5>
-                            </div>
-                        </div>
-
-                        <div class="item same-height-row clearfix">
-                            <div class="image same-height-always">
-                                <a href="#">
-                                    <img class="img-responsive" src="img/detailsquare.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="name same-height-always">
-                                <h5><a href="#">Very very long blog post name</a></h5>
-                            </div>
-                        </div>
-                    </div>
-
-                    <hr class="hidden-md hidden-lg">
 
                 </div>
                 <!-- /.col-md-3 -->
@@ -260,13 +178,6 @@ ____________________________________________________ -->
 
                 </div>
                 <!-- /.col-md-3 -->
-
-
-
-                
-
-                </div>
-                <!-- /.col-md-3 -->
             </div>
             <!-- /.container -->
         </footer>
@@ -274,8 +185,7 @@ ____________________________________________________ -->
 
         <!-- *** FOOTER END *** -->
 
-        <!-- *** COPYRIGHT ***
-_________________________________________________________ -->
+        <!-- *** COPYRIGHT *** _________________________________________________________ -->
 
         <div id="copyright">
             <div class="container">
@@ -305,19 +215,12 @@ _________________________________________________________ -->
     </script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-    <script src="js/jquery.cookie.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
     <script src="js/jquery.parallax-1.1.3.js"></script>
     <script src="js/front.js"></script>
 
-    
-
     <!-- owl carousel -->
     <script src="js/owl.carousel.min.js"></script>
-
-
-
+    {% block extra_script %}{% endblock %}
 </body>
 
 </html>
