--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,5 +1,4 @@
-            <!-- *** NAVBAR ***
-    _________________________________________________________ -->
+            <!-- *** NAVBAR *** _________________________________________________________ -->
 
             <div class="navbar-affixed-top" data-spy="affix" data-offset-top="200">
 
@@ -297,32 +296,20 @@
                         </div>
                         <!--/.nav-collapse -->
 
-
-
                         <div class="collapse clearfix" id="search">
-
                             <form class="navbar-form" role="search">
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Search">
                                     <span class="input-group-btn">
-
-                    <button type="submit" class="btn btn-template-main"><i class="fa fa-search"></i></button>
-
-                </span>
+                                        <button type="submit" class="btn btn-template-main"><i class="fa fa-search"></i></button>
+                                    </span>
                                 </div>
                             </form>
-
                         </div>
                         <!--/.nav-collapse -->
 
                     </div>
-
-
                 </div>
                 <!-- /#navbar -->
-
             </div>
-
             <!-- *** NAVBAR END *** -->
-
-        </header>
