--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,10 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
     <!-- Css animations  -->
-    <link href="css/animate.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}"/>
 
     <!-- THEME -->
-    <link rel="stylesheet" type="text/css" href="{% static 'style.green.css' %}"/>
-
-    <!-- Custom stylesheet - for your changes -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.green.css' %}"/>
 
     <!-- Favicon and apple touch icons-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -39,8 +36,8 @@
     <link rel="apple-touch-icon" sizes="152x152" href="img/apple-touch-icon-152x152.png" />
 
     <!-- owl carousel css -->
-    <link href="css/owl.carousel.css" rel="stylesheet">
-    <link href="css/owl.theme.css" rel="stylesheet">
+    <link href="{% static 'css/owl.carousel.css' %}" rel="stylesheet"/>
+    <link href="{% static 'css/owl.theme.css' %}" rel="stylesheet"/>
     {% block extra_style %}{% endblock %}
 </head>
 
@@ -48,164 +45,33 @@
 
     <div id="all">
 
-        <header>
 
-            <!-- *** TOP *** -->
-            <div id="top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-5 contact">
-                            <p class="hidden-sm hidden-xs">Contact us on dronsystem.slack.com</p>
-                            <p class="hidden-md hidden-lg"><a href="#" data-animate-hover="pulse"><i class="fa fa-phone"></i></a>  <a href="#" data-animate-hover="pulse"><i class="fa fa-envelope"></i></a>
-                            </p>
-                        </div>
-                        <div class="col-xs-7">
-                            <div class="social">
-                                <a href="#" class="external facebook" data-animate-hover="pulse"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="external gplus" data-animate-hover="pulse"><i class="fa fa-google-plus"></i></a>
-                                <a href="#" class="external twitter" data-animate-hover="pulse"><i class="fa fa-twitter"></i></a>
-                                <a href="#" class="email" data-animate-hover="pulse"><i class="fa fa-envelope"></i></a>
-                            </div>
-
-                            <div class="login">
-                                <a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-sign-in"></i> <span class="hidden-xs text-uppercase">Sign in</span></a>
-                                <a href="customer-register.html"><i class="fa fa-user"></i> <span class="hidden-xs text-uppercase">Sign up</span></a>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- *** TOP END *** -->
-
-            <!-- LOAD MENU -->
-            {% include 'menu.html' %}
-            <!-- LOAD MENU -->
-
-        </header>
+        <!-- HEADER -->
+        {% include 'parts/header.html' %}
+        <!-- HEADER -->
 
 
-        <!-- *** LOGIN MODAL *** _________________________________________________________ -->
-        <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true">
-            <div class="modal-dialog modal-sm">
-
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="Login">Customer login</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form action="customer-orders.html" method="post">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="email_modal" placeholder="email">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="password_modal" placeholder="password">
-                            </div>
-
-                            <p class="text-center">
-                                <button class="btn btn-template-main"><i class="fa fa-sign-in"></i> Log in</button>
-                            </p>
-
-                        </form>
-
-                        <p class="text-center text-muted">Not registered yet?</p>
-                        <p class="text-center text-muted"><a href="customer-register.html"><strong>Register now</strong></a>! It is easy and done in 1&nbsp;minute and gives you access to special discounts and much more!</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- *** LOGIN MODAL END *** -->
+        <!-- LOGIN MODAL -->
+        {% include 'parts/login.html' %}
+        <!-- LOGIN MODAL -->
 
 
-
-        <!-- BEGIN CONTENT -->
+        <!-- CONTENT -->
         {% block content %}{% endblock %}
-        <!-- END CONTENT -->
+        <!-- CONTENT -->
 
 
+        <!-- FOOTER -->
+        {% include "parts/footer.html" %}
+        <!-- FOOTER -->
 
-        <!-- *** FOOTER *** ____________________________________________________ -->
-
-        <footer id="footer">
-            <div class="container">
-                <div class="col-md-3 col-sm-6">
-                    <h4>About us</h4>
-
-                    <p>Just two guys trying to do web</p>
-
-                    <hr>
-
-                    <h4>Join our monthly newsletter</h4>
-
-                    <form>
-                        <div class="input-group">
-
-                            <input type="text" class="form-control">
-
-                            <span class="input-group-btn">
-
-                                <button class="btn btn-default" type="button"><i class="fa fa-send"></i></button>
-
-                            </span>
-
-                        </div>
-                        <!-- /input-group -->
-                    </form>
-
-                    <hr class="hidden-md hidden-lg hidden-sm">
-
-                </div>
-                <!-- /.col-md-3 -->
-
-                <div class="col-md-3 col-sm-6">
-
-                    <h4>Contact</h4>
-
-                    <p><strong>Universal Ltd.</strong>
-                        <br>13/25 New Avenue
-                        <br>Newtown upon River
-                        <br>45Y 73J
-                        <br>England
-                        <br>
-                        <strong>Great Britain</strong>
-                    </p>
-
-                    <a href="contact.html" class="btn btn-small btn-template-main">Go to contact page</a>
-
-                    <hr class="hidden-md hidden-lg hidden-sm">
-
-                </div>
-                <!-- /.col-md-3 -->
-            </div>
-            <!-- /.container -->
-        </footer>
-        <!-- /#footer -->
-
-        <!-- *** FOOTER END *** -->
-
-        <!-- *** COPYRIGHT *** _________________________________________________________ -->
-
-        <div id="copyright">
-            <div class="container">
-                <div class="col-md-12">
-                    <p class="pull-left">&copy; 2016. Dronsystem</p>
-                    <p class="pull-right">Template by <a href="https://bootstrapious.com/free-templates">Bootstrapious</a> 
-                         <!-- Not removing these links is part of the license conditions of the template. Thanks for understanding :) If you want to use the template without the attribution links, you can do so after supporting further themes development at https://bootstrapious.com/donate  -->
-                    </p>
-
-                </div>
-            </div>
-        </div>
-        <!-- /#copyright -->
-
-        <!-- *** COPYRIGHT END *** -->
-
+        <!-- COPYRIGHT -->
+        {% include "parts/copyright.html"%}
+        <!-- COPYRIGHT -->
 
 
     </div>
-    <!-- /#all -->
+
 
     <!-- #### JAVASCRIPT FILES ### -->
 
@@ -215,12 +81,13 @@
     </script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-    <script src="js/jquery.parallax-1.1.3.js"></script>
-    <script src="js/front.js"></script>
+    <script src="{% static 'js/jquery.parallax-1.1.3.js' %}"></script>
 
     <!-- owl carousel -->
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+
     {% block extra_script %}{% endblock %}
+
 </body>
 
 </html>
