--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
     <!-- THEME -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.green.css' %}"/>
 
+    <!-- CAROUSEL css-->
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Favicon and apple touch icons-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -84,7 +87,8 @@
     <script src="{% static 'js/jquery.parallax-1.1.3.js' %}"></script>
 
     <!-- owl carousel -->
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery.min.js"></script>
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     {% block extra_script %}{% endblock %}
 
