--- a/static/css/style.green.css
+++ b/static/css/style.green.css
@@ -3589,13 +3589,6 @@ a.list-group-item.active > .badge,
   width: 160px;
   height: 80px;
   display: inline-block;
-  background-color: #6aae7a;
+  background-color: #ffffff;
 }
 
-
-#mobtel {
-}
-#allprod {
-}
-#cons {
-}
