--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -2,30 +2,29 @@
 {% block title %}Catalog{% endblock %}
 {% block content %}
 {% load staticfiles %}
+
 <!--FILTER-->
-<div class = 'filter-container'>
-	<div class="filt full" id='butallprod'>
-		<p>All</p>
+{% if categories %}
+	<div class = 'filter-container'>
+		{% for category in categories %}
+		<div class="filt full" id='butallprod'>
+			<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
+		</div>
+		{% endfor %}
 	</div>
-
-	<div class="filt cons" id='butcons'>
-		<p>Consoles</p>
-	</div>
-
-	<div class="filt mob" id='butmobtel'>
-		<p>Mobile Phones</p>
-	</div>
-</div>
+{% else %}
+	<p>Error category</p>
+{% endif %}	
 
 <div class="aaaaa">
 <!-- FULL CONTENT -->
  
 <!-- MOBTEL CONTENT -->
-<div class="container catalog" id='mobtel'>
-{% for product in products %}
 
-	{% if product.category|lower == 'mobile telephone' %}
-		<div class = 'product tel'>
+{% if products %}
+	<div class="container catalog">
+	{% for product in products %}
+		<div class = 'product'>
 			<h5><a href="#">{{product.category}}</h5></a>
 			<img class="product-image" src="{{product.image.url}}">
 			<h4><a href="#">{{product.name}}</h4></a>
@@ -34,13 +33,13 @@
 			</div>
 			<button class='button-product'><img src="{% static "img/korzina.jpg"%}" 
 			style="height: 30px; width:30px; align: center"></button>
-		</div>           
-		
-	{% endif %}
-{% endfor %}
-</div> 
+		</div>           	
+	{% endfor %}
+	</div> 
+{% endif %}
+	
 
-<!-- CONSOLE CONTENT -->
+<!-- CONSOLE CONTENT 
 <div class="container catalog" id='cons'>
 {% for product in products %}
 
@@ -59,7 +58,7 @@
 
 {% endfor %}
 </div> 
-
+-->
 
 
 
