--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -6,36 +6,34 @@
 
 <!--FILTER CATEGORIES-->
 {% block filter %}
-	{% if categories %}
-		<div class = 'filter-container'>
-			{% for category in categories %}
-			<div class="filt full" id='butallprod'>
-				<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
-			</div>
-			{% endfor %}
-		</div>
-	{% else %}
+<div class = 'filter-container'>
+	{% for category in categories %}
+	<div class="filt full" id='butallprod'>
+		<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
+	</div>
+	{% empty %}
 		<p>There are no categories</p>
-	{% endif %}	
+	{% endfor %}
+</div>
 {% endblock %}
 
 <!--PRODUCTS-->
 {% block products %}
-	{% if products %}
-		<div class="container catalog">
-		{% for product in products %}
-			<div class = 'product'>
-				<img class="product-image" src="{{product.image.url}}">
-				<h4><a href="#">{{product.name}}</h4></a>
-				<div class='price'>
-					{{product.price}}	
-				</div>
-				<button class='button-product'><img src="{% static "img/korzina.jpg"%}" 
-				style="height: 30px; width:30px; align: center"></button>
-			</div>           	
-		{% endfor %}
-		</div> 
-	{% endif %}
+<div class="container catalog">
+	{% for product in products %}
+	<div class = 'product'>
+		<img class="product-image" src="{{product.image.url}}">
+		<h4><a href="#">{{product.name}}</h4></a>
+		<div class='price'>
+			{{product.price}}	
+		</div>
+		<button class='button-product'><img src="{% static "img/korzina.jpg"%}" 
+		style="height: 30px; width:30px; align: center"></button>
+	</div> 
+	{% empty %}
+		<p>There are no categories</p>          	
+	{% endfor %}
+</div> 	
 {% endblock %}
 
 
@@ -44,6 +42,4 @@
 {% load staticfiles %}
 
 <script type="text/javascript" src="{% static "js/jquery-3.1.1.min.js" %}"></script>
-<script type="text/javascript" src="{% static "js/prod.filter.js" %}"></script>
-
 {% endblock %}
