--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,47 +1,36 @@
 {% extends "base.html" %}
-{% block title %}Catalog{% endblock %}
+{% block title %}Cart{% endblock %}
 {% load staticfiles %}
 
 
-
-
-
-
-
-
 {% block content %}
+	<div calss = "container">
+		<div class="cart">
+			{% for cartitem in cartitems %}
+			
+				<div class="cartitem">
+					<p>{{cartitem.product.name}}</p>
+					<button onclick="delCart({{ cartitem.id }})"><img src="{% static "img/korzina.jpg"%}" 
+					style="height: 20px; width:25px; align: center"></button>
+					<input id="{{cartitem.id}}" type="text" class="quantity-input" value="1" maxlength="2" onchange="changeCart({{ cartitem.id }},{{cartitem.product.price}})">
+					<div id='price{{cartitem.id}}'>
+						{{cartitem.product.price}}	
+					</div>
+				</div>
+				<br>
 
-{% for cartitem in cartitems %}
-<div class="cartitems">
-	<p>{{cartitem.product.name}}</p>
-
-	<button name="{{ cartitem.id }}" onclick="delCart({{ cartitem.id }})"><img src="{% static "img/korzina.jpg"%}" 
-	style="height: 30px; width:30px; align: center"></button>
-
-	<input id="{{cartitem.id}}" type="text" class="quantity-input" value="1" maxlength="2" onchange="changeCart({{ cartitem.id }})">
-<div>
-{% empty %}
-
-<h1>FUCK</h1>
-
-{% endfor %}
-
-
+			{% empty %}
+				<h1>FUCK</h1>
+			{% endfor %}
+		</div>	
+	</div>	
 {% endblock %}
-
-
-
-
 
 
 
 {% block extra_script %}
 {% load staticfiles %}
 
-
-
-
-<script type="text/javascript" src="{% static "js/jquery-3.1.1.min.js" %}"></script>
 <script type="text/javascript"src="{% static "js/add-cart.js" %}"></script>
 
 
