--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,58 +1,47 @@
 {% extends "base.html" %}
 {% block title %}Catalog{% endblock %}
 {% load staticfiles %}
+
+
 {% block content %}
-
-
+	<div class="container">
 <!--FILTER CATEGORIES-->
-{% block filter %}
-<div class = 'filter-container'>
-	{% for category in categories %}
-	<div class="filt full" id='butallprod'>
-		<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
-	</div>
-	{% empty %}
-		<p>There are no categories</p>
-	{% endfor %}
-</div>
-{% endblock %}
-
-<!--PRODUCTS-->
-	{% block products %}
-<div class="container catalog">
-	{% for product in products %}
-	<div class = 'product'>
-		<img class="product-image" src="{{product.image.url}}">
-		<h4><a href="#">{{product.name}}</h4></a>
-		<div class='price'>
-			{{product.price}}	
+		<div class = 'filter-container'>
+			{% for category in categories %}
+				<div class="filt full" id='butallprod'>
+					<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
+				</div>
+			{% empty %}
+				<p>There are no categories</p>
+			{% endfor %}
 		</div>
-		
-		<button class='button-product' id = '{{ product.id }}' onclick="addCart({{ product.id }})"><img src="{% static "img/korzina.jpg"%}" 
-		style="height: 30px; width:30px; align: center"></button>
-		
-	</div> 
-	{% empty %}
-		<p>There are no categories</p>          	
-	{% endfor %}
-</div> 	
+	
+<!--PRODUCTS-->
+		<div class="container catalog">
+			{% for product in products %}
+				<div class = 'product'>
+					<img class="product-image" src="{{product.image.url}}">
+					<h4><a href="#">{{product.name}}</h4></a>
+					<div class='price'>
+						{{product.price}}	
+					</div>
+					<button class='button-product' id = '{{ product.id }}' onclick="addCart({{ product.id }})"><img src="{% static "img/korzina.jpg"%}" 
+					style="height: 30px; width:30px; align: center"></button>
+				</div> 
+			{% empty %}
+				<p>There are no categories</p>          	
+			{% endfor %}
+		</div> 	
+	
+	</div>
 {% endblock %}
 
 
-{% endblock %}
 {% block extra_script %}
 {% load staticfiles %}
 
-
-
-<!--
-<script type="text/javascript" src="{% static "js/jquery-3.1.1.min.js" %}"></script>
--->
-<script type="text/javascript"src="{% static "js/jquery.cookie.js" %}"></script>
-<script type="text/javascript"src="{% static "js/add-cart.js" %}"></script>
-
-
-
-
+	
+	<script type="text/javascript"src="{% static "js/jquery.cookie.js" %}"></script>
+	<script type="text/javascript"src="{% static "js/add-cart.js" %}"></script>
 
 {% endblock %}
