--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,6 +4,23 @@
 
 
 {% block content %}
+
+{%if form%}
+
+{% for field in form %}
+    <div class="fieldWrapper">
+        {{ field.errors }}
+        {{ field.label_tag }} {{ field }}
+        {% if field.help_text %}
+        <p class="help">{{ field.help_text|safe }}</p>
+        {% endif %}
+    </div>
+{% endfor %}
+
+{%else%}
+{% endif%}
+
+
 	<div class="container">
 <!--FILTER CATEGORIES-->
 		<div class = 'filter-container'>
