fomr improved, validate added

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.green.css' %}"/>
 
     <!-- Favicon and apple touch icons-->
-    <link rel="apple-touch-icon" href="{% static "img/favicon.ico"" />
+    <link rel="apple-touch-icon" href="{% static 'img/favicon.ico' %}" />
     <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="76x76" href="img/apple-touch-icon-76x76.png" />
