--- a/templates/cart.html
+++ b/templates/cart.html
@@ -35,6 +35,6 @@
 {% load staticfiles %}
 
 <script type="text/javascript"src="{% static "js/add-cart.js" %}"></script>
-
+<script type="text/javascript"src="{% static "js/csrf.js" %}"></script>
 
 {% endblock %}
