Review joint updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,11 @@
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     
 
+    <script type="text/javascript"src="{% static "js/add-cart.js" %}"></script>
+    <script type="text/javascript"src="{% static "js/csrf.js" %}"></script>
+
     {% block extra_script %}{% endblock %}
+
 
 </body>
 
