add Cartmodel methods

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Order{% endblock %}
+{% block title %}Deal{% endblock %}
 {% load staticfiles %}
 {% block content %}
 
