--- a/templates/order.html
+++ b/templates/order.html
@@ -13,9 +13,9 @@
 
 	<form action="/order/confirm/" method="post">
 
-		<p>phone</p>
+		<label>phone</label>
 		<input name="phone" type="text" class="quantity-input">
-		<p>adress</p>
+		<label>adress</label>
 		<input name="address" type="text" class="quantity-input">
 
 		<input type="submit" value="Deal" />
