--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -21,7 +21,7 @@
 			{% for product in products %}
 				<div class = 'product'>
 					<img class="product-image" src="{{product.image.url}}">
-					<h4><a href="#">{{product.name}}</h4></a>
+					<h4><a href="{{ product.get_absolute_url }}">{{product.name}}</h4></a>
 					<div class='price'>
 						{{product.price}}	
 					</div>
