--- a/templates/detail.html
+++ b/templates/detail.html
@@ -7,7 +7,7 @@
 
 		<div class = 'product'>
 			<img class="product-image" src="{{product.image.url}}">
-			<h4><a href="{{ product.get_absolute_url }}">{{product.name}}</h4></a>
+			<h4><a href="#">{{product.name}}</h4></a>
 			<div class='price'>
 				{{product.price}}	
 			</div>
@@ -17,8 +17,6 @@
 
 
 	{% else %}
-
-		<p>Sorry, there no product like this</p>
 
 	{% endif %}
 
