--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -3,6 +3,6 @@
 {% load staticfiles %}
 {% block content %}
 
-<h3>Your order is processing wait for our call</h3>
+<h3>Your order is processing, wait for our call</h3>
 
 {% endblock %}
