--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,9 @@
         {% include 'parts/login.html' %}
         <!-- LOGIN MODAL -->
 
+        <!--Messages -->
+        {% include "parts/messages.html"%}
+        <!--Messages -->
 
         <!-- CONTENT -->
         {% block content %}{% endblock %}
@@ -67,7 +70,6 @@
         <!-- COPYRIGHT -->
         {% include "parts/copyright.html"%}
         <!-- COPYRIGHT -->
-
 
     </div>
 
