--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -6,32 +6,32 @@
 {% block content %}
 <div class="container">
 <!--FILTER CATEGORIES-->
-		<div class = 'filter-container'>
+
+		<div class="row" style="margin: 20px">
 			{% for category in categories %}
-				<div class="filt full" id='butallprod'>
-					<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
+				<div class="col-md-2" style="font-size: 20px; margin-bottom: 20px">
+					<a href="{{ category.get_absolute_url }}"><span style="font-family: 'Quattrocento Sans'">{{ category.name }}</span></a>
 				</div>
-			{% empty %}
-				<p>There are no categories</p>
 			{% endfor %}
 		</div>
-	
 <!--PRODUCTS-->
-		<div class="container catalog">
+		<div class="row">
 			{% for product in products %}
-				<div class = 'product'>
-					<img class="product-image" src="{{product.image.url}}">
-					<h4><a href="{{ product.get_absolute_url }}">{{product.name}}</h4></a>
-					<div class='price'>
-						{{product.price}}	
+				<div class = 'col-md-6 text-center' style="margin-bottom: 20px">
+					<img class="img-catalog" src="{{product.image.url}}"  height="500">
+					<div class="row">
+						<div class = 'col-md-7'>
+							<h4 style="display: inline-block"><a href="{{ product.get_absolute_url }}" >{{product.name}}</a></h4>
+						</div>
+						<div class = 'col-md-2'>
+							<button type="button" class="btn btn-success" id = '{{ product.id }}' onclick="addCart({{ product.id }})" style="margin-left: 30px; margin-top: 4px" >{{product.price}}</button>
+						</div>
 					</div>
-					<button class='button-product' id = '{{ product.id }}' onclick="addCart({{ product.id }})"><img src="{% static "img/korzina.jpg"%}" 
-					style="height: 30px; width:30px; align: center"></button>
 				</div> 
 			{% empty %}
 				<p>There are no products</p>          	
 			{% endfor %}
 		</div> 	
 	
-	</div>
+</div>
 {% endblock %}
