--- a/templates/main2.html
+++ b/templates/main2.html
@@ -44,7 +44,7 @@
   			</div>
 		</div>
 
-		<div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify; ">
+		<div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px; ">
 			<a href="{{ category.get_absolute_url }}" style="text-align: center;font-size: 25px;">{{category.name}}</a> 
 			<br>
 			{{category.description}}
