--- a/templates/cart.html
+++ b/templates/cart.html
@@ -4,28 +4,33 @@
 
 
 {% block content %}
-	<div calss = "container">
-		<div class="cart text-center">
+	<div class = "container" style="margin-top: 30px">
 			{% for cartitem in cartitems %}
-				<div class="cartitem">
-					<p>{{cartitem.product.name}}</p>
-					<button onclick="delCart({{ cartitem.id }}, {{ cartitem.id }})">
-						<img src="{% static "img/korzina.jpg"%}" 
-						style="height: 20px; width:25px; align: center">
-					</button>
-					<input id="{{cartitem.id}}" type="number"
-						 class="quantity-input" value="{{ cartitem.quantity }}" onchange="changeCart({{ cartitem.id }},{{cartitem.product.price}})">
-					<div id='price{{cartitem.id}}'>
-						{{cartitem.product.price}}	
+				<div class="row" id="row{{cartitem.id}}" style="margin-bottom: 20px">
+					<div class="col-md-3 text-center">
+						<img src="{{cartitem.product.image.url}}" height="200px">
+					</div>
+					<div style="margin-top: 60px">
+						<div class="col-md-4">
+							<h4>{{cartitem.product.name}}</h4>
+							<p class="text-info">{{cartitem.product.price}}</p>
+						</div>
+						<div class="col-md-4">
+							<input id="{{cartitem.id}}" type="number"
+								 class="quantity-input" value="{{ cartitem.quantity }}" onchange="changeCart({{ cartitem.id }},{{cartitem.product.price}})" style="margin-bottom: 10px">
+							<button type="button" class="btn btn-danger" id = '{{ product.id }}' onclick="delCart({{ cartitem.id }})" >Delete</button>
+							<div id='price{{cartitem.id}}'>
+								<p class="text-success">{{cartitem.product.price}}</p>
+							</div>
+						</div>
 					</div>
 				</div>
-				<br>
 			{% empty %}
-				<h1>Your cart is empty now :(</h1>
+					<h1>Your cart is empty now :(</h1>
 			{% endfor %}
-			
-			<a href="{% url 'order' %}"><button>GO TO DEAL</button></a>
-			
-		</div>	
+			<div class="col-md-12 text-center" style="margin-bottom: 40px">
+				<a href="{% url 'order' %}"><button type="button" class="btn btn-success">GO TO DEAL</button></a>
+			</div>
+		
 	</div>	
 {% endblock %}
