--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Deal{% endblock %}
+{% block title %}Confirm{% endblock %}
 {% load staticfiles %}
 {% block content %}
 
-<h3>Your order is processing, wait for our call</h3>
+<div class="container text-center">
+	<h3 class="text-success">Your order is processing, wait for our call</h3>
+</div>
 
 {% endblock %}
