--- a/templates/parts/menu.html
+++ b/templates/parts/menu.html
@@ -9,7 +9,7 @@
                         <div class="navbar-header">
 
                             <a class="navbar-brand home" href="#">
-                                <img src="{% static "img/logo.png" %}" alt="Universal logo" class="hidden-xs hidden-sm">   
+                                <img src="{% static "img/logo.jpeg" %}" alt="Universal logo" class="hidden-xs hidden-sm">   
                             </a>
                             <div class="navbar-buttons">
                                 <button type="button" class="navbar-toggle btn-template-main" data-toggle="collapse" data-target="#navigation">
