--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
-{% block title %}Login{% endblock %}
+
+
 {% block content %}
 	
-<div class='container'>
+<div class='container' style="margin-top: 20px">
 	<form action="{% url 'login' %}" method="post">{% csrf_token %}
 			{{form.as_p}}
 		<input type="submit" value="Login" />
