--- a/templates/parts/header.html
+++ b/templates/parts/header.html
@@ -11,10 +11,7 @@
                         </div>
                         <div class="col-xs-7">
                             <div class="social">
-                                <a href="#" class="external facebook" data-animate-hover="pulse"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="external gplus" data-animate-hover="pulse"><i class="fa fa-google-plus"></i></a>
-                                <a href="#" class="external twitter" data-animate-hover="pulse"><i class="fa fa-twitter"></i></a>
-                                <a href="#" class="email" data-animate-hover="pulse"><i class="fa fa-envelope"></i></a>
+                                <a href="{% url "social:begin" "vk-oauth2" %}" class="external vk" data-animate-hover="pulse"><i class="fa fa-vk"></i></a>
                             </div>
 
                             <div class="login">
