--- a/templates/registration.html
+++ b/templates/registration.html
@@ -9,6 +9,7 @@
 	<form action="{% url 'registration' %}" method="post">{% csrf_token %}
 			{{ form|bootstrap }}
 		<button type="submit" class="btn btn-primary">Registr</button>
+		или Войти через <button class='btn-primary'><i class="fa fa-vk" aria-hidden="true"></i></button>
 	</form>
 </div>
 </div>	
