cart flow global improvment

--- a/templates/parts/menu.html
+++ b/templates/parts/menu.html
@@ -47,7 +47,7 @@
                                 <!-- Cart -->
 
                                 <li class="">
-                                    <a href="{% url 'cart'%}">Корзина{%if total_menu%}<span class="badge badge-pill badge-danger">{{total_menu}}</span>{% endif %}</a>
+                                    <a href="{% url 'cart'%}">Корзина{%if menu_cart%}<span class="badge badge-pill badge-danger">{{menu_cart}}</span>{% endif %}</a>
                                 </li>
                                 
                                 <!-- Cart -->
